<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_lable">Search</string>
    <string name="search_hint_lable">Enter image term</string>
    <string name="title_activity_full_image_view">FullImageViewActivity</string>
    <string name="Advanced_lable">Advanced</string>
    <string name="title_activity_advanced_options">AdvancedOptionsActivity</string>
    <string name="advanced_options_title_lable">Advanced Search Options</string>
    <string name="image_size_lable">Image Size</string>
    <string name="imagesize_menu_prompt">Choose Image Size</string>
 
    <string-array name="image_size_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    
    <string-array name="color_filter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>
    
    <string-array name="image_type_array">
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="color_filter_lable">Color Filter</string>
        <string name="choose_color_filter">Choose Color</string>
        <string name="image_type_lable">Image Type</string>
        <string name="site_filter_lable">Site filter</string>
        <string name="button_set_options_lable">Set</string>
        <string name="load_more_lable">Load More</string>

</resources>
