<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageSearchActivity" >

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etQuery"
        android:layout_alignBottom="@+id/etQuery"
        android:layout_alignParentRight="true"
        android:onClick="onClickImageSearch"
        android:text="@string/search_lable" />

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:ems="10"
        android:hint="@string/search_hint_lable" />

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btLoadMore"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etQuery"
        android:numColumns="3" >

    </GridView>

    <Button
        android:id="@+id/btLoadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickLoadMore"
        android:text="@string/load_more_lable" />

</RelativeLayout>
